# prime-hunter

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.test.yml  docker-compose.yml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_prime_form.md
.github/workflows/: ci.yml  release.yml
benches/: core_bench.rs  flint_bench.rs  kbn_bench.rs  proof_bench.rs  sieve_bench.rs
deploy/: CLAUDE.md  darkreach-coordinator.service  darkreach-postgresql.service  darkreach-redis.service  darkreach-worker@.service  deploy.sh  etcd.service  migrate-supabase-to-selfhosted.sh  nginx-darkreach.conf  nginx-primehunt.conf  patroni.service  patroni.yml  pg-backup.sh  pg-replica.conf  pg-restore.sh  pg_hba.conf  pgbouncer.ini  pgbouncer.service  pgo-build.sh  postgres-exporter.service  postgresql.conf  primehunt-coordinator.service  primehunt-worker@.service  production-deploy.sh  redis.conf  setup-replica.sh  worker-deploy.sh
deploy/grafana/: darkreach-database.json  darkreach.json
deploy/helm/: monitoring-values.yaml
deploy/releases/: worker-manifest.json
dev/: Caddyfile  dev.sh  dnsmasq.conf  setup.sh
docs/: CLAUDE.md  architecture-comparison.md  factorial-primes.md  factorial.md  internals.md  kbn-primes.md  kbn.md  landscape.md  naming.md  new-forms.md  palindromic-primes.md  palindromic.md  publishing.md  references.md  roadmap.md  server-setup.md  strategy.md
docs/roadmaps/: agents.md  ai-engine.md  architecture.md  cluster.md  competitive-analysis.md  database.md  engine.md  fleet.md  frontend.md  gwnum-flint.md  network.md  observability.md  ops.md  projects.md  public-compute.md  research.md  server.md  testing.md  website.md
docs/testing/: infrastructure.md  plan.md
frontend/: CLAUDE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-setup.ts  vitest.config.ts
frontend/e2e/: browse.spec.ts  dashboard.spec.ts  docs.spec.ts  fleet.spec.ts  helpers.ts  login.spec.ts  navigation.spec.ts  responsive.spec.ts  theme.spec.ts
frontend/playwright-report/: index.html
frontend/public/: manifest.json  sw.js
gwnum-sys/: Cargo.toml  build.rs  wrapper.h
gwnum-sys/src/: lib.rs
projects/templates/: carol-kynea-survey.toml  cullen-woodall-survey.toml  factorial-record.toml  factorial-survey.toml  gen-fermat-survey.toml  kbn-record.toml  near-repdigit-survey.toml  palindromic-survey.toml  primorial-survey.toml  repunit-survey.toml  sophie-germain-survey.toml  twin-survey.toml  wagstaff-record.toml
scripts/: dev-down.sh  dev-remote.sh  dev-status.sh  dev-up.sh  dev.sh  pre-commit  test-db-setup.sh
scripts/release/: generate-worker-manifest.sh
src/: CLAUDE.md  agent.rs  ai_engine.rs  carol_kynea.rs  certificate.rs  checkpoint.rs  cli.rs  cullen_woodall.rs  dashboard.html  dashboard.rs  db.rs  deploy.rs  events.rs  factorial.rs  fleet.rs  flint.rs  gen_fermat.rs  gwnum.rs  kbn.rs  lib.rs  main.rs  metrics.rs  near_repdigit.rs  operator.rs  p1.rs  palindromic.rs  pfgw.rs  pg_worker.rs  primorial.rs  progress.rs  project.rs  prom_metrics.rs  proof.rs  prst.rs  repunit.rs  search_manager.rs  search_params.rs  sieve.rs  sophie_germain.rs  strategy.rs  (+5 more)
src/dashboard/: middleware_auth.rs  mod.rs  routes_agents.rs  routes_auth.rs  routes_docs.rs  (+17 more)
supabase/: CLAUDE.md
tests/: CLAUDE.md  api_integration.rs  cli_tests.rs  db_integration.rs  mock_coordinator.rs  operator_config_tests.rs  operator_integration_tests.rs  operator_update_tests.rs  platform_tests.rs  property_tests.rs  security_tests.rs
website/: package-lock.json  package.json  vercel.json
(+316 files in other folders)
