[package]
name = "primehunt"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
