[package]
name = "primehunt"
version = "0.1.0"
edition = "2021"

[dependencies]
rug = "1"
rayon = "1"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "catch-panic", "cors", "limit", "timeout"] }
tower = { version = "0.5", features = ["timeout"] }
ureq = { version = "3", features = ["json"] }
sha2 = "0.10.9"
sysinfo = "0.34"
base64 = "0.22.1"
url = "2"
urlencoding = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
tempfile = "3.25.0"
