[package]
name = "darkreach"
version = "0.1.0"
edition = "2021"

[features]
default = []
flint = ["dep:flint3-sys"]
gwnum = ["dep:gwnum-sys"]

[dependencies]
rug = "1"
flint3-sys = { version = "3.3", optional = true, features = ["gmp-mpfr-sys"] }
gwnum-sys = { path = "gwnum-sys", optional = true }
rayon = "1"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "catch-panic", "cors", "limit", "timeout"] }
tower = { version = "0.5", features = ["timeout"] }
ureq = { version = "3", features = ["json"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
sha2 = "0.10.9"
sysinfo = "0.34"
base64 = "0.22.1"
uuid = { version = "1", features = ["serde"] }
url = "2"
urlencoding = "2"
mimalloc = { version = "0.1", default-features = false }
libc = "0.2"
prometheus-client = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
tempfile = "3.25.0"
assert_cmd = "2"
predicates = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sieve_bench"
harness = false

[[bench]]
name = "kbn_bench"
harness = false

[[bench]]
name = "proof_bench"
harness = false

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "flint_bench"
harness = false
